# lighthouse

./: .gitignore  Cargo.toml  Makefile  analyse_missed.py  get_blocks.fish  pinku.csv  tabulate.py
.github/workflows/: release.yml  test-suite.yml
account_manager/: Cargo.toml
account_manager/src/: lib.rs
account_manager/src/validator/: deposit.rs  import.rs  mod.rs  modify.rs
beacon_node/: Cargo.toml
beacon_node/beacon_chain/: Cargo.toml
beacon_node/beacon_chain/fuzz/: Cargo.toml
beacon_node/beacon_chain/src/: attestation_verification.rs  beacon_chain.rs  beacon_fork_choice_store.rs  beacon_snapshot.rs  block_reward.rs  block_verification.rs  builder.rs  canonical_head.rs  checkpoint_cache.rs  errors.rs  fork_choice.rs  fork_revert.rs  historical_blocks.rs  lib.rs  light_client_server_cache.rs  metrics.rs  migrate.rs  observed_aggregates.rs  (+7 more)
beacon_node/beacon_processor/: Cargo.toml
beacon_node/client/: Cargo.toml
beacon_node/db_cli/: Cargo.toml
beacon_node/db_cli/src/: cli.rs  lib.rs
beacon_node/eth1/: Cargo.toml
beacon_node/execution_layer/: Cargo.toml
beacon_node/genesis/: Cargo.toml
beacon_node/http_metrics/: Cargo.toml
beacon_node/lighthouse_network/: Cargo.toml
beacon_node/network/: Cargo.toml
beacon_node/operation_pool/: Cargo.toml
beacon_node/src/: cli.rs  config.rs  lib.rs
beacon_node/store/: Cargo.toml
book/src/: database-migrations.md
common/deposit_contract/: Cargo.toml
common/eth2/: Cargo.toml
common/filesystem/: Cargo.toml
common/malloc_utils/: Cargo.toml
common/monitoring_api/: Cargo.toml
common/warp_utils/: Cargo.toml
consensus/state_processing/: Cargo.toml
consensus/types/: Cargo.toml
crypto/bls/: Cargo.toml
crypto/kzg/: Cargo.toml
database_manager/src/: lib.rs
db_bench/: Cargo.toml
db_bench/benches/: comparison.rs
db_bench/src/: lib.rs
eth2/types/: Cargo.toml
lcli/: Cargo.toml
lcli/src/: block_root.rs  deploy_deposit_contract.rs  http_bench.rs  main.rs  parse_ssz.rs  process_attestation.rs  refund_deposit_contract.rs  state_diff.rs
lighthouse/: Cargo.toml
lighthouse/src/: main.rs
lighthouse/tests/: beacon_node.rs
scripts/: coverage.env
scripts/local_testnet/: vars.env
slasher/: Cargo.toml
slasher/src/: array.rs  attester_record.rs  config.rs  database.rs  error.rs  lib.rs  migrate.rs  slasher.rs
testing/ef_tests/: Cargo.toml
testing/eth1_test_rig/: Cargo.toml
testing/web3signer_tests/: Cargo.toml
validator_client/: Cargo.toml
validator_client/slashing_protection/fuzz/: Cargo.toml
validator_client/slashing_protection/fuzz/fuzz_targets/: import_no_errors.rs
validator_client/src/: config.rs  duties_service.rs  initialized_validators.rs  lib.rs  sync_committee_service.rs  validator_store.rs
(+225 files in other folders)
