[package]
name = "slashing_protection-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
types = { path = "../../../consensus/types" }
tempfile = "3.2.0"

[dependencies.slashing_protection]
path = ".."
features = ["arbitrary-fuzz"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "import_no_errors"
path = "fuzz_targets/import_no_errors.rs"
test = false
doc = false

[patch]
[patch.crates-io]
fixed-hash = { git = "https://github.com/paritytech/parity-common", rev="df638ab0885293d21d656dc300d39236b69ce57d" }
eth2_ssz = { path = "../../../consensus/ssz" }
eth2_ssz_types = { path = "../../../consensus/ssz_types" }
tree_hash = { path = "../../../consensus/tree_hash" }
eth2_serde_utils = { path = "../../../consensus/serde_utils" }
